@@ -34,7 +34,6 @@
               <configuration>
                   <source>21</source>
                   <target>21</target>
-                  <compilerArgs>--enable-preview</compilerArgs>
               </configuration>
           </plugin>
       </plugins>
@@ -58,6 +57,18 @@
     <dependency>
       <groupId>redis.clients</groupId>
       <artifactId>jedis</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>5.10.2</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>5.12.0</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 </project>
